--- a/TME1_webscrapping_etu.ipynb
+++ b/TME1_webscrapping_etu.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 1,
       "metadata": {
         "id": "E4zarSeAQdHm"
       },
       "outputs": [],
       "source": [
-        "!pip install -q lxml\n",
+        "# !pip install -q lxml\n",
         "\n",
         "import bs4\n",
         "import lxml\n",
