--- a/TME2_DALAS_EDA_etu.ipynb
+++ b/TME2_DALAS_EDA_etu.ipynb
@@ -2,6 +2,17 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## <right>Binôme \n",
+        "* Saliou Barry\n",
+        "* Zhile Zhang\n",
+        "</right>\n",
+        "***"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "snhL9W6GUFhM"
       },
@@ -18060,7 +18071,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "0.0.0"
     }
   },
   "nbformat": 4,
