--- a/projet/Projet-idee.ipynb
+++ b/projet/Projet-idee.ipynb
@@ -24,16 +24,7 @@
    "execution_count": 1,
    "id": "cba02dfc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Python/3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install -q lxml\n",
     "\n",
@@ -41,7 +32,7 @@
     "import lxml\n",
     "import pandas as pd\n",
     "import urllib\n",
-    "import craber\n",
+    "import projet_craber as craber\n",
     "\n",
     "from urllib import request"
    ]
@@ -2472,7 +2463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
