--- a/projet/Projet-idee.ipynb
+++ b/projet/Projet-idee.ipynb
@@ -5,36 +5,25 @@
    "id": "16bc2c03",
    "metadata": {},
    "source": [
-    "# Project on Influences of Climatic Pattern on the food chain supply globally"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47a90e5e",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Climatic Pattern\n",
-    "\n",
-    "The abnormalities and changes occurring in the climate very often are the main challenges impressed on the environment that needs to be taken care of. These environmental changes will affect the human beings on earth. This Data Science Project makes an attempt to analyse the changes in the food production globally that occurs due to change in climatic conditions. The main purpose of this study is to evaluate the consequences of climatic changes on primary agricultural yields. This project will evaluate all the effects related to change in temperature and rainfall pattern. The amount of carbon dioxide that impacts plant development and the uncertainties in climate change will next be considered. As a result, data representations will be the primary focus of this project. It will also assess productivity across different locations and geographical regions."
+    "# Project l’impact des aliment sur l’environnement, de la production à la mise en vente"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cba02dfc",
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip install -q lxml\n",
     "\n",
-    "import bs4\n",
-    "import lxml\n",
+    "#import bs4\n",
+    "#import lxml\n",
     "import pandas as pd\n",
-    "import urllib\n",
+    "#import urllib\n",
     "import projet_craber as craber\n",
     "\n",
-    "from urllib import request"
+    "#from urllib import request"
    ]
   },
   {
