--- a/projet/Projet-idee.ipynb
+++ b/projet/Projet-idee.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cba02dfc",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "import pandas as pd\n",
     "#import urllib\n",
     "import projet_craber as craber\n",
+    "import numpy as np\n",
     "\n",
     "#from urllib import request"
    ]
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0dd78f0c",
    "metadata": {},
    "outputs": [],
@@ -93,10 +94,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "134e37fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Code CIQUAL',\n",
+       " 'Score unique EF - Agriculture',\n",
+       " 'Score unique EF - Transformation',\n",
+       " 'Score unique EF - Emballage',\n",
+       " 'Score unique EF - Transport',\n",
+       " 'Score unique EF - Supermarché et distribution',\n",
+       " 'Score unique EF - Consommation',\n",
+       " 'Changement climatique - Agriculture',\n",
+       " 'Changement climatique - Transformation',\n",
+       " 'Changement climatique - Emballage',\n",
+       " 'Changement climatique - Transport',\n",
+       " 'Changement climatique - Supermarché et distribution',\n",
+       " 'Changement climatique - Consommation',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances non-cancérogènes - Agriculture',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances non-cancérogènes - Transformation',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances non-cancérogènes - Emballage',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances non-cancérogènes - Transport',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances non-cancérogènes - Supermarché et distribution',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances non-cancérogènes - Consommation',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances cancérogènes - Agriculture',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances cancérogènes - Transformation',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances cancérogènes - Emballage',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances cancérogènes - Transport',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances cancérogènes - Supermarché et distribution',\n",
+       " 'Effets toxicologiques sur la santé humaine   substances cancérogènes - Consommation',\n",
+       " \"Écotoxicité pour écosystèmes aquatiques d'eau douce - Agriculture\",\n",
+       " \"Écotoxicité pour écosystèmes aquatiques d'eau douce - Transformation\",\n",
+       " \"Écotoxicité pour écosystèmes aquatiques d'eau douce - Emballage\",\n",
+       " \"Écotoxicité pour écosystèmes aquatiques d'eau douce - Transport\",\n",
+       " \"Écotoxicité pour écosystèmes aquatiques d'eau douce - Supermarché et distribution\",\n",
+       " \"Écotoxicité pour écosystèmes aquatiques d'eau douce - Consommation\"]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# selection toutes les colonne sauf les colonnes \n",
     "liste = (df_eta.columns).to_list()\n",
@@ -114,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e6d584f4",
    "metadata": {},
    "outputs": [],
@@ -132,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "4ce6014b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Selection des colonnes pertinentes pour l'analyse\n",
     "df_synt = df_syn[col_syn]\n",
-    "df_etape = df_eta[col_eta]"
+    "df_etape = df_eta[col_eta]\n"
    ]
   },
   {
@@ -152,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "2bce9862",
    "metadata": {},
    "outputs": [],
@@ -171,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "e5322f9a",
    "metadata": {},
    "outputs": [
@@ -376,7 +418,7 @@
        "[3 rows x 44 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,6 +426,293 @@
    "source": [
     "df_fusion = pd.merge(df_synt, df_etape, on='Code CIQUAL', how='inner')\n",
     "df_fusion.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3032c441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remplissage des valeurs nulles\n",
+    "# 预处理：填充空值\n",
+    "float_columns = df_fusion.select_dtypes(include='float64').columns\n",
+    "\n",
+    "# Traversée la data frame, remplissez les valeurs nulles comme moyenne\n",
+    "# 遍历浮点列，将空值填充为平均值\n",
+    "for column in float_columns:\n",
+    "    mean_value = df_fusion[column].mean()\n",
+    "    df_fusion[column].fillna(mean_value, inplace=True)\n",
+    "\n",
+    "# supprimer les lignes avec des strings vide\n",
+    "# 删除有空str的行\n",
+    "df_fusion.dropna(inplace=True)\n",
+    "\n",
+    "\n",
+    "# Conserver les valeurs dans l'intervalle de confiance à 95%\n",
+    "# 预处理：DQR取95%置信区间\n",
+    "\n",
+    "# Définir un seuil de 1.96 écarts types (intervalle de confiance à 95 %)\n",
+    "# 定义阈值为1.96倍标准差（95%置信区间）\n",
+    "threshold = 1.96\n",
+    "\n",
+    "# Calculer la moyenne et l'écart type\n",
+    "# 计算均值和标准差\n",
+    "mean = np.mean(df_fusion['DQR'])\n",
+    "std = np.std(df_fusion['DQR'])\n",
+    "\n",
+    "# Calculer les bornes inférieur et supérieur\n",
+    "# 计算下限和上限阈值\n",
+    "lower_bound = mean - threshold * std\n",
+    "\n",
+    "# Supprimer les valeurs en dehors de l'intervalle de confiance\n",
+    "# 删除超出置信区间的值\n",
+    "data_synthese = df_fusion[(df_fusion['DQR'] >= lower_bound)].copy()\n",
+    "\n",
+    "# Prétraitement : les points abnormales et les valeurs aberrantes\n",
+    "# 离群点和异常值\n",
+    "\n",
+    "# Définir un seuil de 3 écarts types\n",
+    "# 定义阈值为3倍标准差\n",
+    "threshold = 3\n",
+    "\n",
+    "# Stocker les noms de la colonne avec la type float\n",
+    "# 获取浮点类型列的列名\n",
+    "float_columns = data_synthese.select_dtypes(include='float64').columns\n",
+    "float_columns = float_columns.drop('Score unique EF 3.1', errors='ignore')\n",
+    "\n",
+    "# Parcourir les colonnes et modifier les données dépassant le seuil\n",
+    "# 遍历列，将超出阈值的数据改为阈值\n",
+    "for column in float_columns:\n",
+    "    mean = data_synthese[column].mean()\n",
+    "    std = data_synthese[column].std()\n",
+    "\n",
+    "    # Calculer les bornes inférieur et supérieur\n",
+    "    # 计算下限和上限阈值\n",
+    "    lower_bound = mean - threshold * std\n",
+    "    upper_bound = mean + threshold * std\n",
+    "\n",
+    "    # Remplacer les données dépassant par le seuil\n",
+    "    # 将超出阈值的数据改为阈值\n",
+    "    data_synthese[column] = np.where(data_synthese[column] < lower_bound, lower_bound, data_synthese[column])\n",
+    "    data_synthese[column] = np.where(data_synthese[column] > upper_bound, upper_bound, data_synthese[column])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d6820c1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code CIQUAL</th>\n",
+       "      <th>Sous-groupe d'aliment</th>\n",
+       "      <th>Nom du Produit en Français</th>\n",
+       "      <th>Matériau d'emballage</th>\n",
+       "      <th>DQR</th>\n",
+       "      <th>Score unique EF</th>\n",
+       "      <th>Changement climatique</th>\n",
+       "      <th>Effets toxicologiques sur la santé humaine   substances non-cancérogènes</th>\n",
+       "      <th>Effets toxicologiques sur la santé humaine   substances cancérogènes</th>\n",
+       "      <th>Écotoxicité pour écosystèmes aquatiques d'eau douce</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Effets toxicologiques sur la santé humaine   substances cancérogènes - Emballage</th>\n",
+       "      <th>Effets toxicologiques sur la santé humaine   substances cancérogènes - Transport</th>\n",
+       "      <th>Effets toxicologiques sur la santé humaine   substances cancérogènes - Supermarché et distribution</th>\n",
+       "      <th>Effets toxicologiques sur la santé humaine   substances cancérogènes - Consommation</th>\n",
+       "      <th>Écotoxicité pour écosystèmes aquatiques d'eau douce - Agriculture</th>\n",
+       "      <th>Écotoxicité pour écosystèmes aquatiques d'eau douce - Transformation</th>\n",
+       "      <th>Écotoxicité pour écosystèmes aquatiques d'eau douce - Emballage</th>\n",
+       "      <th>Écotoxicité pour écosystèmes aquatiques d'eau douce - Transport</th>\n",
+       "      <th>Écotoxicité pour écosystèmes aquatiques d'eau douce - Supermarché et distribution</th>\n",
+       "      <th>Écotoxicité pour écosystèmes aquatiques d'eau douce - Consommation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11084</td>\n",
+       "      <td>algues</td>\n",
+       "      <td>Agar (algue), cru</td>\n",
+       "      <td>LDPE</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>1.226025</td>\n",
+       "      <td>6.745806</td>\n",
+       "      <td>4.771949e-08</td>\n",
+       "      <td>6.108019e-09</td>\n",
+       "      <td>43.368466</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.348668e-11</td>\n",
+       "      <td>1.978767e-10</td>\n",
+       "      <td>1.586650e-11</td>\n",
+       "      <td>1.339638e-12</td>\n",
+       "      <td>37.706218</td>\n",
+       "      <td>3.382904</td>\n",
+       "      <td>0.553107</td>\n",
+       "      <td>1.520831</td>\n",
+       "      <td>0.159745</td>\n",
+       "      <td>0.045661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11023</td>\n",
+       "      <td>herbes</td>\n",
+       "      <td>Ail séché, poudre</td>\n",
+       "      <td>Verre</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>0.103513</td>\n",
+       "      <td>0.750274</td>\n",
+       "      <td>9.281982e-09</td>\n",
+       "      <td>4.343632e-10</td>\n",
+       "      <td>5.672531</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.984326e-10</td>\n",
+       "      <td>7.115333e-11</td>\n",
+       "      <td>1.305564e-11</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2.222564</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.474064</td>\n",
+       "      <td>0.904691</td>\n",
+       "      <td>0.071211</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11000</td>\n",
+       "      <td>herbes</td>\n",
+       "      <td>Ail, cru</td>\n",
+       "      <td>Pas d'emballage</td>\n",
+       "      <td>3.54</td>\n",
+       "      <td>0.064652</td>\n",
+       "      <td>0.358043</td>\n",
+       "      <td>6.066248e-09</td>\n",
+       "      <td>2.824785e-10</td>\n",
+       "      <td>4.064650</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>6.567832e-11</td>\n",
+       "      <td>1.631954e-11</td>\n",
+       "      <td>1.082874e-11</td>\n",
+       "      <td>2.778205</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.828340</td>\n",
+       "      <td>0.089014</td>\n",
+       "      <td>0.369091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Code CIQUAL Sous-groupe d'aliment Nom du Produit en Français  \\\n",
+       "0        11084                algues          Agar (algue), cru   \n",
+       "1        11023                herbes          Ail séché, poudre   \n",
+       "2        11000                herbes                   Ail, cru   \n",
+       "\n",
+       "  Matériau d'emballage   DQR  Score unique EF  Changement climatique  \\\n",
+       "0                 LDPE  2.99         1.226025               6.745806   \n",
+       "1                Verre  4.11         0.103513               0.750274   \n",
+       "2      Pas d'emballage  3.54         0.064652               0.358043   \n",
+       "\n",
+       "   Effets toxicologiques sur la santé humaine   substances non-cancérogènes  \\\n",
+       "0                                       4.771949e-08                          \n",
+       "1                                       9.281982e-09                          \n",
+       "2                                       6.066248e-09                          \n",
+       "\n",
+       "   Effets toxicologiques sur la santé humaine   substances cancérogènes  \\\n",
+       "0                                       6.108019e-09                      \n",
+       "1                                       4.343632e-10                      \n",
+       "2                                       2.824785e-10                      \n",
+       "\n",
+       "   Écotoxicité pour écosystèmes aquatiques d'eau douce  ...  \\\n",
+       "0                                          43.368466    ...   \n",
+       "1                                           5.672531    ...   \n",
+       "2                                           4.064650    ...   \n",
+       "\n",
+       "   Effets toxicologiques sur la santé humaine   substances cancérogènes - Emballage  \\\n",
+       "0                                       7.348668e-11                                  \n",
+       "1                                       1.984326e-10                                  \n",
+       "2                                       0.000000e+00                                  \n",
+       "\n",
+       "   Effets toxicologiques sur la santé humaine   substances cancérogènes - Transport  \\\n",
+       "0                                       1.978767e-10                                  \n",
+       "1                                       7.115333e-11                                  \n",
+       "2                                       6.567832e-11                                  \n",
+       "\n",
+       "   Effets toxicologiques sur la santé humaine   substances cancérogènes - Supermarché et distribution  \\\n",
+       "0                                       1.586650e-11                                                    \n",
+       "1                                       1.305564e-11                                                    \n",
+       "2                                       1.631954e-11                                                    \n",
+       "\n",
+       "   Effets toxicologiques sur la santé humaine   substances cancérogènes - Consommation  \\\n",
+       "0                                       1.339638e-12                                     \n",
+       "1                                       0.000000e+00                                     \n",
+       "2                                       1.082874e-11                                     \n",
+       "\n",
+       "   Écotoxicité pour écosystèmes aquatiques d'eau douce - Agriculture  \\\n",
+       "0                                          37.706218                   \n",
+       "1                                           2.222564                   \n",
+       "2                                           2.778205                   \n",
+       "\n",
+       "   Écotoxicité pour écosystèmes aquatiques d'eau douce - Transformation  \\\n",
+       "0                                           3.382904                      \n",
+       "1                                           0.000000                      \n",
+       "2                                           0.000000                      \n",
+       "\n",
+       "   Écotoxicité pour écosystèmes aquatiques d'eau douce - Emballage  \\\n",
+       "0                                           0.553107                 \n",
+       "1                                           2.474064                 \n",
+       "2                                           0.000000                 \n",
+       "\n",
+       "   Écotoxicité pour écosystèmes aquatiques d'eau douce - Transport  \\\n",
+       "0                                           1.520831                 \n",
+       "1                                           0.904691                 \n",
+       "2                                           0.828340                 \n",
+       "\n",
+       "   Écotoxicité pour écosystèmes aquatiques d'eau douce - Supermarché et distribution  \\\n",
+       "0                                           0.159745                                   \n",
+       "1                                           0.071211                                   \n",
+       "2                                           0.089014                                   \n",
+       "\n",
+       "   Écotoxicité pour écosystèmes aquatiques d'eau douce - Consommation  \n",
+       "0                                           0.045661                   \n",
+       "1                                           0.000000                   \n",
+       "2                                           0.369091                   \n",
+       "\n",
+       "[3 rows x 44 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_synthese.head(3)"
    ]
   },
   {
@@ -425,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
