Integration des models dans le dashboard

--- a/projet/Projet-idee copy.ipynb
+++ b/projet/Projet-idee copy.ipynb
@@ -5311,15 +5311,6 @@
     "    ax.yaxis.set_ticklabels([\"faible\", \"fort\"])\n",
     "    plt.show()\n",
     "\n",
-    "    # # Affichage des coefficients\n",
-    "    # coefficients = lr_model.coef_[0]\n",
-    "    # coefficients = pd.DataFrame(\n",
-    "    #     coefficients, index=colonnes_selectionnees, columns=[\"Coefficient\"]\n",
-    "    # )\n",
-    "    # print(coefficients)\n",
-    "\n",
-    "    # Courbe ROC\n",
-    "    # Calcul des probabilités prédites\n",
     "    y_pred_proba = lr_model.predict_proba(X_test)[:, 1]\n",
     "\n",
     "    # Calcul de la courbe ROC\n",
@@ -5775,7 +5766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 111,
    "id": "cc9fe32c",
    "metadata": {},
    "outputs": [
@@ -5820,8 +5811,8 @@
        "      <th>1</th>\n",
        "      <td>Logistic Regression</td>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>-0.499613</td>\n",
-       "      <td>0.617575</td>\n",
+       "      <td>-0.242300</td>\n",
+       "      <td>0.808650</td>\n",
        "      <td>Fail to reject H0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -5844,8 +5835,8 @@
        "      <th>4</th>\n",
        "      <td>SVM</td>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>-0.499613</td>\n",
-       "      <td>0.617575</td>\n",
+       "      <td>-0.242300</td>\n",
+       "      <td>0.808650</td>\n",
        "      <td>Fail to reject H0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -5868,16 +5859,16 @@
        "      <th>7</th>\n",
        "      <td>Random Forest</td>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>1.342751</td>\n",
-       "      <td>0.179982</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.317810</td>\n",
        "      <td>Fail to reject H0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Random Forest</td>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>-0.333028</td>\n",
+       "      <td>0.739258</td>\n",
        "      <td>Fail to reject H0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -5895,14 +5886,14 @@
       "text/plain": [
        "               Model-1        Model-2  t-statistic   p-value  \\\n",
        "0  Logistic Regression            SVM          NaN       NaN   \n",
-       "1  Logistic Regression  Random Forest    -0.499613  0.617575   \n",
+       "1  Logistic Regression  Random Forest    -0.242300  0.808650   \n",
        "2  Logistic Regression  Decision Tree     0.229192  0.818817   \n",
        "3  Logistic Regression            KNN    -0.499613  0.617575   \n",
-       "4                  SVM  Random Forest    -0.499613  0.617575   \n",
+       "4                  SVM  Random Forest    -0.242300  0.808650   \n",
        "5                  SVM  Decision Tree     0.229192  0.818817   \n",
        "6                  SVM            KNN    -0.499613  0.617575   \n",
-       "7        Random Forest  Decision Tree     1.342751  0.179982   \n",
-       "8        Random Forest            KNN     0.000000  1.000000   \n",
+       "7        Random Forest  Decision Tree     1.000000  0.317810   \n",
+       "8        Random Forest            KNN    -0.333028  0.739258   \n",
        "9        Decision Tree            KNN    -0.904364  0.366252   \n",
        "\n",
        "   Hypothesis Result  \n",
@@ -5924,7 +5915,7 @@
    ],
    "source": [
     "from scipy.stats import ttest_rel\n",
-    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
     "import pandas as pd\n",
     "\n",
     "model_names = [\"Logistic Regression\", \"SVM\", \"Random Forest\", \"Decision Tree\", \"KNN\"]\n",
@@ -5964,7 +5955,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
+   "id": "d96b6e43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {\n",
+    "    \"Régression Logistique\": lr_model,\n",
+    "    \"SVM\": grid,\n",
+    "    \"Random Forest\": rf_model,\n",
+    "    \"Arbre de Décision\": dt_model,\n",
+    "    \"KNN\": knn_model,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "id": "ac7fb5fd",
    "metadata": {},
    "outputs": [
@@ -5983,7 +5990,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x193d71c91d0>"
+       "<IPython.lib.display.IFrame at 0x193d8e16890>"
       ]
      },
      "metadata": {},
@@ -5997,6 +6004,7 @@
     "import plotly.graph_objs as go\n",
     "from dash.dependencies import Input, Output\n",
     "import pandas as pd\n",
+    "import dash_bootstrap_components as dbc\n",
     "\n",
     "\n",
     "app = dash.Dash(__name__)\n",
@@ -6140,6 +6148,46 @@
     "                        )\n",
     "                    ],\n",
     "                ),\n",
+    "                # Onglet \"Modèles\"\n",
+    "                dcc.Tab(\n",
+    "                    label=\"Modèles\",\n",
+    "                    children=[\n",
+    "                        html.Div(\n",
+    "                            [\n",
+    "                                html.Label(\"Choisissez un modèle :\"),\n",
+    "                                dcc.RadioItems(\n",
+    "                                    id=\"model-radio\",\n",
+    "                                    options=[\n",
+    "                                        {\"label\": model, \"value\": model}\n",
+    "                                        for model in models.keys()\n",
+    "                                    ],\n",
+    "                                    value=\"Régression Logistique\",  # valeur par défaut\n",
+    "                                ),\n",
+    "                            ]\n",
+    "                        ),\n",
+    "                        html.Div(\n",
+    "                            [\n",
+    "                                html.Label(\"Choisissez les métriques à afficher :\"),\n",
+    "                                dcc.Checklist(\n",
+    "                                    id=\"metric-checklist\",\n",
+    "                                    options=[\n",
+    "                                        {\n",
+    "                                            \"label\": \"Matrice de Confusion\",\n",
+    "                                            \"value\": \"confusion_matrix\",\n",
+    "                                        },\n",
+    "                                        {\n",
+    "                                            \"label\": \"Rapport de Classification\",\n",
+    "                                            \"value\": \"classification_report\",\n",
+    "                                        },\n",
+    "                                        {\"label\": \"Courbe ROC\", \"value\": \"roc_curve\"},\n",
+    "                                    ],\n",
+    "                                    value=[\"roc_curve\"],  # valeur par défaut\n",
+    "                                ),\n",
+    "                            ]\n",
+    "                        ),\n",
+    "                        html.Div(id=\"graph-output\"),\n",
+    "                    ],\n",
+    "                ),\n",
     "            ],\n",
     "        ),\n",
     "    ]\n",
@@ -6171,15 +6219,19 @@
     "    scores_moyens_ef = [moyennes_clusters[cluster] for cluster in cluster_labels]\n",
     "\n",
     "    fig = go.Figure()\n",
+    "\n",
+    "    # Bar chart for the number of foods per cluster\n",
     "    fig.add_trace(\n",
     "        go.Bar(\n",
     "            x=cluster_labels,\n",
     "            y=aliments_par_cluster,\n",
     "            name=\"Nombre d'Aliments\",\n",
     "            marker_color=\"skyblue\",\n",
+    "            yaxis=\"y1\",\n",
     "        )\n",
     "    )\n",
     "\n",
+    "    # Line chart for the average EF scores\n",
     "    fig.add_trace(\n",
     "        go.Scatter(\n",
     "            x=cluster_labels,\n",
@@ -6187,14 +6239,25 @@
     "            mode=\"lines+markers\",\n",
     "            name=\"Score EF Moyen\",\n",
     "            marker_color=\"red\",\n",
+    "            yaxis=\"y2\",\n",
     "        )\n",
     "    )\n",
     "\n",
     "    fig.update_layout(\n",
     "        title=\"Nombre d'Aliments et Score EF Moyen par Cluster\",\n",
     "        xaxis_title=\"Numéro du Cluster\",\n",
-    "        yaxis_title=\"Nombre d'Aliments\",\n",
-    "        yaxis2=dict(title=\"Score EF Moyen\", overlaying=\"y\", side=\"right\"),\n",
+    "        yaxis=dict(\n",
+    "            title=\"Nombre d'Aliments\",\n",
+    "            titlefont=dict(color=\"skyblue\"),\n",
+    "            tickfont=dict(color=\"skyblue\"),\n",
+    "        ),\n",
+    "        yaxis2=dict(\n",
+    "            title=\"Score EF Moyen\",\n",
+    "            titlefont=dict(color=\"red\"),\n",
+    "            tickfont=dict(color=\"red\"),\n",
+    "            overlaying=\"y\",\n",
+    "            side=\"right\",\n",
+    "        ),\n",
     "        legend=dict(x=0.1, y=0.9),\n",
     "    )\n",
     "\n",
@@ -6322,6 +6385,89 @@
     "\n",
     "    # Si aucun cluster n'est sélectionné, renvoyer un graphique vide\n",
     "    return go.Figure()\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(\"graph-output\", \"children\"),\n",
+    "    [\n",
+    "        Input(\"model-radio\", \"value\"),\n",
+    "        Input(\"metric-checklist\", \"value\"),\n",
+    "    ],\n",
+    ")\n",
+    "def update_graph(selected_model, selected_metrics):\n",
+    "    model = models[selected_model]\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    y_pred_proba = model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "    figures = []\n",
+    "\n",
+    "    if \"confusion_matrix\" in selected_metrics:\n",
+    "        conf_mat = confusion_matrix(y_test, y_pred)\n",
+    "        trace = go.Heatmap(\n",
+    "            z=conf_mat,\n",
+    "            x=[\"faible\", \"fort\"],\n",
+    "            y=[\"faible\", \"fort\"],\n",
+    "            colorscale=\"Blues\",\n",
+    "            showscale=False,\n",
+    "        )\n",
+    "        fig = go.Figure(data=trace)\n",
+    "        annotations = []\n",
+    "        for i, row in enumerate(conf_mat):\n",
+    "            for j, value in enumerate(row):\n",
+    "                annotations.append(\n",
+    "                    dict(\n",
+    "                        x=j,\n",
+    "                        y=i,\n",
+    "                        text=str(value),\n",
+    "                        showarrow=False,\n",
+    "                        font=dict(size=14, color=\"black\"),\n",
+    "                    )\n",
+    "                )\n",
+    "        fig.update_layout(\n",
+    "            title=\"Matrice de Confusion\",\n",
+    "            xaxis=dict(title=\"Prédit\", side=\"bottom\"),\n",
+    "            yaxis=dict(title=\"Vrai\", autorange=\"reversed\"),\n",
+    "            annotations=annotations,\n",
+    "        )\n",
+    "        figures.append(dcc.Graph(figure=fig))\n",
+    "\n",
+    "    if \"classification_report\" in selected_metrics:\n",
+    "        # Afficher juste la précision, le recall et le f1-score\n",
+    "        f1_scores = precision_score(y_test, y_pred, average=None)\n",
+    "        precision = precision_score(y_test, y_pred, average=None)\n",
+    "        recall = recall_score(y_test, y_pred, average=None)\n",
+    "        trace = go.Table(\n",
+    "            header=dict(values=[\"Classe\", \"Précision\", \"Rappel\", \"F1-Score\"]),\n",
+    "            cells=dict(values=[[\"faible\", \"fort\"], precision, recall, f1_scores]),\n",
+    "        )\n",
+    "        fig = go.Figure(trace)\n",
+    "        fig.update_layout(title=\"Rapport de Classification\")\n",
+    "        figures.append(dcc.Graph(figure=fig))\n",
+    "\n",
+    "    if \"roc_curve\" in selected_metrics:\n",
+    "        fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
+    "        auc = roc_auc_score(y_test, y_pred_proba)\n",
+    "        trace = go.Scatter(\n",
+    "            x=fpr, y=tpr, mode=\"lines\", name=f\"Courbe ROC (AUC = {auc:.2f})\"\n",
+    "        )\n",
+    "        fig = go.Figure(trace)\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=[0, 1],\n",
+    "                y=[0, 1],\n",
+    "                mode=\"lines\",\n",
+    "                line=dict(dash=\"dash\"),\n",
+    "                name=\"Guess aléatoire\",\n",
+    "            )\n",
+    "        )\n",
+    "        fig.update_layout(\n",
+    "            title=\"Courbe ROC\",\n",
+    "            xaxis_title=\"Taux de faux positifs\",\n",
+    "            yaxis_title=\"Taux de vrais positifs\",\n",
+    "        )\n",
+    "        figures.append(dcc.Graph(figure=fig))\n",
+    "\n",
+    "    return [dcc.Graph(figure=fig.figure) for fig in figures]\n",
     "\n",
     "\n",
     "# Exécuter l'application\n",
